--- a/index.html
+++ b/index.html
@@ -7,43 +7,45 @@
   </head>
   <body>
     <header>
-      <ul>
-        <li>WEBSTUDIO</li>
-        <li>Studio</li>
-        <li>Portfolio</li>
-        <li>Contacts</li>
-        <li>info@devstudio.com</li>
-        <li>+11 (000) 111-11-11</li>
-      </ul>
-
-      <main>
-        <h1>Effective Solutions for Your Business</h1>
-        <h2>Strategy</h2>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h2>Punctuality</h2>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h2>Diligence</h2>
-        <p>
-          Research and confirm brands with the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h2>Technologies</h2>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
-      </main>
+      <p><a href="WEBSTUDIO">WEBSTUDIO</a></p>
+      <p>Studio</p>
+      <p>Portfolio</p>
+      <p>Contacts</p>
+      <p><a href="info@devstudio.com">info@devstudio.com</a></p>
+      <p><a href="+11 (000) 111-11-11">+11 (000) 111-11-11</a></p>
     </header>
-    <footer>
+
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+      <h2>Strategy</h2>
       <p>
-        WebStudio Increase the flow of customers and sales for your business
-        with digital marketing & growth solutions.
+        Our goal is to identify the business problem to walk away with the
+        perfect and creative solution.
+      </p>
+      <h2>Punctuality</h2>
+      <p>
+        Bring the key message to the brand's audience for the best price within
+        the shortest possible time.
+      </p>
+      <h2>Diligence</h2>
+      <p>
+        Research and confirm brands with the strongest digital growth
+        opportunities and minimize risk.
+      </p>
+      <h2>Technologies</h2>
+      <p>
+        Design practice focused on digital experiences. We bring forth a deep
+        passion for problem-solving.
+      </p>
+      <h2>Our Team</h2>
+    <img src="./images/images/img (1).jpg" alt="img (1)" />
+    </main>
+    <footer>
+      <p><a href="WEBSTUDIO">WEBSTUDIO</a></p>
+      <p>
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
