--- a/index.html
+++ b/index.html
@@ -5,43 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
     <header>
-      <p><a href="WEBSTUDIO">WEBSTUDIO</a></p>
-      <p>Studio</p>
-      <p>Portfolio</p>
-      <p>Contacts</p>
-      <p><a href="info@devstudio.com">info@devstudio.com</a></p>
-      <p><a href="+11 (000) 111-11-11">+11 (000) 111-11-11</a></p>
+      <nav>
+        <a href="WebStudio">WebStudio</a>
+        <ul>
+          <li><a href="Studio">Studio</a></li>
+          <li><a href="Portfolio">Portfolio</a></li>
+          <li><a href="Contacts">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="+11(000)111-11-11">+11(000)111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
-      <h2>Strategy</h2>
-      <p>
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution.
-      </p>
-      <h2>Punctuality</h2>
-      <p>
-        Bring the key message to the brand's audience for the best price within
-        the shortest possible time.
-      </p>
-      <h2>Diligence</h2>
-      <p>
-        Research and confirm brands with the strongest digital growth
-        opportunities and minimize risk.
-      </p>
-      <h2>Technologies</h2>
-      <p>
-        Design practice focused on digital experiences. We bring forth a deep
-        passion for problem-solving.
-      </p>
-      <h2>Our Team</h2>
-    <img src="./images/images/img (1).jpg" alt="img (1)" />
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
+      <section>
+        <h2>our capabilities</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
+
+    <h2>Our Team</h2>
+
     <footer>
-      <p><a href="WEBSTUDIO">WEBSTUDIO</a></p>
+      <p><a href="WebStudio">WebStudio</a></p>
       <p>
         Increase the flow of customers and <br />
         sales for your business with digital <br />
