--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="WebStudio">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="Studio">Studio</a></li>
           <li><a href="Portfolio">Portfolio</a></li>
@@ -18,8 +18,8 @@
       </nav>
       <address>
         <ul>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="+11(000)111-11-11">+11(000)111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -63,12 +63,52 @@
           </li>
         </ul>
       </section>
+
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img-1.jpg"
+              alt="Mark Guerrero Product Designer"
+              width="264"
+              height="260"
+            />
+            <p>Mark Guerrero Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-2.jpg"
+              alt="Tom Ford Frontend Developer"
+              width="264"
+              height="260"
+            />
+            <p>Tom Ford Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-3.jpg"
+              alt="Camila Garcia Marketing"
+              width="264"
+              height="260"
+            />
+            <p>Camila Garcia Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-4.jpg"
+              alt="Daniel Wilson UI Designer"
+              width="264"
+              height="260"
+            />
+            <p>Daniel Wilson UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
-    <h2>Our Team</h2>
-
     <footer>
-      <p><a href="WebStudio">WebStudio</a></p>
+      <p><a href="./index.html">WebStudio</a></p>
       <p>
         Increase the flow of customers and <br />
         sales for your business with digital <br />
