--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
+          <li><a href="tel:+110001111111">+110001111111</a></li>
         </ul>
       </address>
     </header>
@@ -74,7 +74,8 @@
               width="264"
               height="260"
             />
-            <p>Mark Guerrero Product Designer</p>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
@@ -83,7 +84,8 @@
               width="264"
               height="260"
             />
-            <p>Tom Ford Frontend Developer</p>
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
@@ -92,7 +94,8 @@
               width="264"
               height="260"
             />
-            <p>Camila Garcia Marketing</p>
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
@@ -101,17 +104,17 @@
               width="264"
               height="260"
             />
-            <p>Daniel Wilson UI Designer</p>
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <p><a href="./index.html">WebStudio</a></p>
+      <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
